src/test/resources/basic/error/no_such_property/Target.kt
package basic.error.no_such_property

class Target {
    var a: Int = 0
}